tests/functional/lang/eval-fail-sort-1.err.exp
error:
       … while calling the 'sort' builtin
         at /pwd/lang/eval-fail-sort-1.nix:1:1:
            1| builtins.sort 1 "foo"
             | ^
            2|

       … while evaluating the second argument passed to builtins.sort

       error: expected a list but found a string: "foo"
